kodex-rs/tui/src/chatwidget/snapshots/kodex_tui__chatwidget__tests__safety_buffering_retry_prompt.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: popup
---
  Giving this request a little extra thought
  If you'd rather not wait, retry with a faster model. It may be less capable
  of handling complex requests.


› 1. Retry with a faster model
  2. Dismiss and keep waiting
  3. Learn more

  No action is required. Kodex will keep waiting, and this menu will close when
  the response is ready.
