kodex-rs/tui/src/chatwidget/snapshots/kodex_tui__chatwidget__tests__side_context_label_shows_hidden_side.snap
---
source: tui/src/chatwidget/tests/side.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› Ask Kodex to do anything                                                      "
"                                                                                "
"  GPT-5.6-Sol                                                  ctrl+/ for side  "
