kodex-rs/tui/src/chatwidget/snapshots/kodex_tui__chatwidget__tests__slash_copy_picker_status_fields.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: "render_bottom_popup(&chat,\n100).replace(&directory,\n\"[[workspace]]\").replace(crate::version::KODEX_CLI_VERSION, \"VERSION\")"
---
  Copy to clipboard


› 1. Whole status  >_ OpenAI Kodex (vVERSION)
  2. Model         gpt-5.5
  3. Directory     [[workspace]]
  4. Thread name   Clipboard example
  5. Session ID    00000000-0000-0000-0000-000000000123

  enter select · esc back
