kodex-rs/tui/src/chatwidget/snapshots/kodex_tui__chatwidget__tests__slash_export_filename_prompt.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: popup
---
  Save conversation

› kodex-session-00000000-0000-0000-0000-000000000123.md

  enter submit · esc back
